fixed bugges: first - I made slider of testimonials work properly on mobile and secondly - you can not scroll while nav is opened and added class for nav burger btn (.hamburger--white-color-on-dark-background)  which is going to be aplied via JS

--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -4,6 +4,10 @@
 @use '../components/forms' as *;
 @use '../components/links' as *;
 
+.unable-to-scroll{
+	overflow-y: hidden;
+}
+
 .wrapper {
 	margin: 0 auto;
 	width: 100%;
